@@ -3,6 +3,7 @@ declare module 'htmlparser2-without-node-native'
 declare module 'react-native-feather'
 declare module 'react-native-htmlview'
 declare module 'react-native-toast-message'
+declare module 'rtl-detect'
 
 declare module '@helpers/features' {
   const features: { feature: string; version: number; reference?: string }[]
