@@ -2,6 +2,8 @@ toooting愉快！此版本包括以下改进和修复：
 - 自动识别发嘟语言
 - 记住上次公共时间轴选项
 - 显示编辑历史的差异
+- 关注列表可隐藏转嘟和回复
 - 新增管理员推送通知
+- 支持嘟文右到左文字
 - 修复过滤整词功能
 - 修复平板不能删除草稿
