@@ -2,6 +2,8 @@ Enjoy toooting! This version includes following improvements and fixes:
 - Automatic setting detected language when tooting
 - Remember public timeline type selection
 - Show diffing of edit history
+- Allow hiding boosts and replies in home timeline
+- Support toot in RTL languages
 - Added notification for admins
 - Fix whole word filter matching
 - Fix tablet cannot delete toot drafts
